--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 width="264"
                 height="260"
               />
-              <div class="team-card">
+              <div class="card">
                 <h3 class="team-subheader">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
                 <ul class="socials">
@@ -166,7 +166,7 @@
                 width="264"
                 height="260"
               />
-              <div class="team-card">
+              <div class="card">
                 <h3 class="team-subheader">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
                 <ul class="socials">
@@ -208,7 +208,7 @@
                 width="264"
                 height="260"
               />
-              <div class="team-card">
+              <div class="card">
                 <h3 class="team-subheader">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
                 <ul class="socials">
@@ -250,7 +250,7 @@
                 width="264"
                 height="260"
               />
-              <div class="team-card">
+              <div class="card">
                 <h3 class="team-subheader">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
                 <ul class="socials">
