Edit sections and footer

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
           </p>
         </div>
         <div class="footer-right">
-          <p class="social-media">Social Media</p>
+          <p class="social-media">Social media</p>
           <ul class="socials">
             <li class="socials-item">
               <a href="" class="socials-link">
