Edit portfolio section

--- a/index.html
+++ b/index.html
@@ -294,19 +294,17 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="box">
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
                 <img
                   src="./images/img-5.jpg"
                   alt="Banking App"
                   width="360"
                   height="300"
                 />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="card">
                 <h3 class="portfolio-subheader">Banking App</h3>
@@ -315,19 +313,17 @@
             </li>
             <li class="portfolio-item">
               <div class="box">
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
                 <img
-                  src="./images/img-6.jpg"
-                  alt="Cashless Payment"
+                  src="./images/img-5.jpg"
+                  alt="Banking App"
                   width="360"
                   height="300"
                 />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="card">
                 <h3 class="portfolio-subheader">Cashless Payment</h3>
@@ -336,19 +332,17 @@
             </li>
             <li class="portfolio-item">
               <div class="box">
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
                 <img
-                  src="./images/img-7.jpg"
-                  alt="Meditation App"
+                  src="./images/img-5.jpg"
+                  alt="Banking App"
                   width="360"
                   height="300"
                 />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="card">
                 <h3 class="portfolio-subheader">Meditation App</h3>
@@ -357,19 +351,17 @@
             </li>
             <li class="portfolio-item">
               <div class="box">
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
                 <img
-                  src="./images/img-8.jpg"
-                  alt="Taxi Service"
+                  src="./images/img-5.jpg"
+                  alt="Banking App"
                   width="360"
                   height="300"
                 />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="card">
                 <h3 class="portfolio-subheader">Taxi Service</h3>
@@ -378,19 +370,17 @@
             </li>
             <li class="portfolio-item">
               <div class="box">
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
                 <img
-                  src="./images/img-9.jpg"
-                  alt="Screen Illustrations"
+                  src="./images/img-5.jpg"
+                  alt="Banking App"
                   width="360"
                   height="300"
                 />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="card">
                 <h3 class="portfolio-subheader">Screen Illustrations</h3>
@@ -399,19 +389,17 @@
             </li>
             <li class="portfolio-item">
               <div class="box">
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
                 <img
-                  src="./images/img-10.jpg"
-                  alt="Online Courses"
+                  src="./images/img-5.jpg"
+                  alt="Banking App"
                   width="360"
                   height="300"
                 />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="card">
                 <h3 class="portfolio-subheader">Online Courses</h3>
